--- a/roar-helm/charts/roar-web/values.yaml
+++ b/roar-helm/charts/roar-web/values.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 replicaCount: 1
 image:
-  repository: localhost:5000/roar-web-image
+  repository: localhost:5000/roar-web
   tag: v1
   pullPolicy: Always
 deployment:
