--- a/roar-helm/charts/roar-web/values.yaml
+++ b/roar-helm/charts/roar-web/values.yaml
@@ -1,4 +1,4 @@
-# Default values for otp-frontend-chart.
+# Default values for roar-web chart.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 replicaCount: 1
