--- a/roar-docker/docker-compose.yml
+++ b/roar-docker/docker-compose.yml
@@ -1,11 +1,11 @@
 roar-web-container:
-    image: roar-web-image
+    image: roar-web
     ports:
         - "8089:8080"
     links:
         - "roar-db-container:mysql"
 roar-db-container:
-    image: roar-db-image
+    image: roar-db
     ports:
         - "3308:3306"
     environment:
